# starches-builder

./: .gitignore  .npmignore  Cargo.toml  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
prebuild/: graphs.json  prebuild.json
scripts/: get-platform-glob.js  install-pagefind.js  resolve-pagefind.js  setup-env.js  setup-pagefind-env.js
src/: assets.ts  config.ts  etl.ts  flatbush.ts  index.ts  init.ts  lib.rs  locations.ts  metadata-extractor.ts  native-reindex.ts  pagefind.ts  permissions.ts  precompile-templates.ts  progress.ts  reindex.ts  resource-loader.ts  ros-madair.ts  safe-utils.ts  slug-generator.ts  templates.ts  types.ts  utils.ts  warning-collector.ts
src/cli/: index.ts
tests/integration/: cli_index.test.ts
tests/integration/definitions/business_data/: aai_merged.json
tests/integration/output/pagefind/: pagefind-entry.json  pagefind-modular-ui.js  pagefind-ui.js  pagefind.en_326f4fc0d9.pf_meta  pagefind.en_d65c8d5fac.pf_meta  pagefind.js  wasm.en.pagefind  wasm.unknown.pagefind
tests/integration/output/pagefind/filter/: en_b9e619b.pf_filter
tests/integration/output/pagefind/fragment/: en_16237aa.pf_fragment  en_1fe46ea.pf_fragment  en_254ad5b.pf_fragment  en_2b3d8c7.pf_fragment  en_6030708.pf_fragment  en_66db868.pf_fragment  en_6c65fc3.pf_fragment  en_79708ba.pf_fragment  en_8bcdeb0.pf_fragment  en_9169284.pf_fragment  en_9461f99.pf_fragment  (+9 more)
tests/unit/: mapsToObjects.test.ts  setTileDataForNode.test.ts
(+1 files in other folders)
