[package]
name = "starches-builder"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["full"] }
napi-derive = "2"
flatgeobuf = { version = "4.6.0", default-features = false }
geozero = { version = "0.14.0", default-features = false, features = ["with-geojson"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
